Update author URL

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 	    {
 	      	"name": "Pippin Williamson",
 	      	"email": "pippin@pippinsplugins.com",
-	      	"homepage": "https://easydigitaldownloads.com/extensions/commissions/"
+	      	"homepage": "https://easydigitaldownloads.com/"
 	    }
 	],
    	"require": {
