--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,5 +1,5 @@
 filter:
-    excluded_paths: [vendor/*, tests/*, .tx/*, languages/*, includes/libraries/*, bin/*, assets/*, templates/* ]
+    excluded_paths: [vendor/*, tests/*, bin/*, assets/* ]
 before_commands:
     - 'composer install --dev --prefer-source'
 tools:
@@ -24,10 +24,10 @@ tools:
     php_pdepend: true
     php_loc:
         enabled: true
-        excluded_dirs: [vendor, tests, .tx, languages, includes/libraries, bin, assets, templates]
+        excluded_dirs: [vendor, tests, languages, bin, assets]
     php_cpd:
         enabled: true
-        excluded_dirs: [vendor, tests, .tx, languages, includes/libraries, bin, assets, templates]
+        excluded_dirs: [vendor, tests, languages, bin, assets]
 checks:
     php:
         psr2_switch_declaration: false
