--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,12 @@ php:
 - 5.4
 - 5.5
 - 5.6
+- 7.0
 - hhvm
 
 env:
 - WP_VERSION=latest WP_MULTISITE=0
+- WP_VERSION=4.4 WP_MULTISITE=0
 - WP_VERSION=4.3 WP_MULTISITE=0
 - WP_VERSION=4.2 WP_MULTISITE=0
 - WP_VERSION=4.1 WP_MULTISITE=0
